feat: Introduce BaseException for standardized error handling and refactor GlobalExceptionHandler to utilize it